buildscript {
    ext {
        slf4jVersion = "2.0.17"
        apacheCommonsNetVersion = "3.11.1"
        telegramBotVersion = "8.3.0"
        springBootStarterVersion = "3.4.4"
    }
}

plugins {
    id "java"
    id "org.springframework.boot" version "3.2.5"
    id 'io.spring.dependency-management' version '1.1.4'
    id 'org.jetbrains.kotlin.jvm'
}

group = "org.openvpn"
version = "0.0.1 Release"

repositories {
    mavenCentral()
}

dependencies {

    /* Spring boot starter */
    implementation "org.springframework.boot:spring-boot-starter:${springBootStarterVersion}"

    /* Apache telnet */
    implementation "commons-net:commons-net:${apacheCommonsNetVersion}"

    /* Telegram bot  */
    implementation "com.github.pengrad:java-telegram-bot-api:${telegramBotVersion}"

    /* Logger */
    implementation "org.slf4j:slf4j-api:${slf4jVersion}"

    /* Database */
    implementation 'com.h2database:h2'
    implementation 'org.liquibase:liquibase-core'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    /* Testing */
    testImplementation platform("org.junit:junit-bom:5.10.0")
    testImplementation "org.junit.jupiter:junit-jupiter"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
}

test {
    useJUnitPlatform()
}
kotlin {
    jvmToolchain(21)
}
